--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "build-api": "openapi-generator-cli generate -o ./api -i http://ec33nw.map.analytics.api.com/v3/api-docs/ -g typescript-angular",
+    "build-api": "openapi-generator-cli generate -o ./api -i https://ec33nw-analytics-service-bordaso.cloud.okteto.net/v3/api-docs/ -g typescript-angular",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
