--- a/kubernetes.yaml
+++ b/kubernetes.yaml
@@ -29,39 +29,10 @@ metadata:
 spec:
   selector:
     app: ec33nw-map-gui
+  type: LoadBalancer
   ports:
     - port: 80
       name: defaultnginxport
       protocol: TCP
       targetPort: 80
-
----
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  name: ec33nw-map-gui-ingress
-  annotations:
-    kubernetes.io/ingress.class: "nginx"
-  namespace: default
-spec:
-  rules:
-    - host: ec33nw.map.analytics.com
-      http:
-        paths:
-          - path: /
-            pathType: Prefix
-            backend:
-              service:
-                name: ec33nw-map-gui-service
-                port:
-                  number: 80
-    - host: ec33nw.map.analytics.api.com
-      http:
-        paths:
-          - path: /
-            pathType: Prefix
-            backend:
-              service:
-                name: ec33nw-analytics-service
-                port:
-                  number: 8081
+      nodePort: 30080
